<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_task_manage">TaskManageActivity</string>
    <string name="title_activity_task_feed_back">TaskFeedBackActivity</string>
    <string name="title_activity_task_setting">TaskSettingActivity</string>
    <string name="title_activity_task_rec">TaskRecActivity</string>

    <string name="title_activity_task_manager">TaskManagerActivity</string>
    <string name="taskmanager_title">信息上报</string>
    <string name="taskmanager_receive_company">接收单位:</string>
    <string name="taskmanager_person_onduty">责任人:</string>
    <string name="taskmanager_contact">联系方式:</string>
    <string name="taskmanager_content_report">上报内容:</string>
    <string name="taskmanager_current_location">当前位置:</string>
    <string name="taskmanager_other_info">其他信息:</string>
    <string name="taskmanager_camera">相机</string>
    <string name="taskmanager_pic">图片</string>
    <string name="taskmanager_record">录音</string>
    <string name="taskmanager_video">视频</string>
    <string name="taskmanager_plot">标绘</string>
</resources>
