<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.www.myapplication.TaskManageActivity"
    tools:showIn="@layout/activity_task_manage"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/tv_taskmanager_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#8BC330"
            android:layout_gravity="right"
            android:textColor="#fff"
            android:text="@string/taskmanager_title"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            />

        <!-- 接收单位 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/taskmanager_receive_company"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:maxLength="15"
                android:maxLines="1"
                android:inputType="text"
                android:background="@drawable/bg_dingdang_btn_default"
                android:layout_height="wrap_content"
                android:hint="中科软"
                />
        </LinearLayout>
        <!-- 责任人 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/taskmanager_person_onduty"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:maxLength="3"
                android:maxLines="1"
                android:inputType="text"
                android:background="@drawable/bg_dingdang_btn_default"
                android:layout_height="wrap_content"
                android:hint="谈家鸣"
                />
        </LinearLayout>
        <!-- 联系方式 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/taskmanager_contact"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:maxLength="11"
                android:maxLines="1"
                android:inputType="phone"
                android:background="@drawable/bg_dingdang_btn_default"
                android:layout_height="wrap_content"
                android:hint="18500028742"
                />
        </LinearLayout>
        <!-- 上报内容 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/taskmanager_content_report"
                />
            <EditText
                android:id="@+id/et_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="100dp"
                android:maxLines="5"
                android:inputType="text"
                android:background="@drawable/bg_dingdang_btn_default"
                android:hint="现场已被控制，详情见附件"
                />
        </LinearLayout>
        <!-- 当前位置 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:drawableRight="@drawable/location_blue"
                android:text="@string/taskmanager_current_location"
                />
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                />
            <WebView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="5"
                android:background="#6d6d6d"
                />
        </LinearLayout>
        <!-- 其他信息 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/taskmanager_other_info"
                android:drawableRight="@drawable/shrink"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                />
            <ImageView
                android:id="@+id/iv_shrink"
                android:layout_width="30dp"
                android:layout_height="30dp"

                android:layout_marginLeft="10dp"
                android:gravity="left"/>
        </LinearLayout>
        <!-- 相机 图片 录音 视频 标绘 -->

        <LinearLayout
            android:id="@+id/multimedia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_camera"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ssdk_oks_logo_qq"
                android:text="@string/taskmanager_camera"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/tv_pic"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ssdk_oks_logo_qzone"
                android:layout_height="wrap_content"
                android:text="@string/taskmanager_pic"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_record"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ssdk_oks_logo_sinaweibo"
                android:layout_height="wrap_content"
                android:text="@string/taskmanager_record"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_video"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ssdk_oks_logo_wechat"
                android:layout_height="wrap_content"
                android:text="@string/taskmanager_video"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_plot"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ssdk_oks_logo_wechatmoments"
                android:layout_height="wrap_content"
                android:text="@string/taskmanager_plot"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/iv_camera"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:src="#4c0df7" />

            <ImageView
                android:id="@+id/iv_camera1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="#898989"
                android:src="#f9bf6d" />

            <ImageView
                android:id="@+id/iv_camera2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="#898989"
                android:src="#2ae640" />
            <ImageView
                android:id="@+id/iv_camera3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="#898989"
                android:src="#981471" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>